2002-06-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/objidl.h (struct tagPROPVARIANT): Kill obsolete
	union member _VARIANT_BOOL bool.
	
2002-06-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winioctl.h (FILE_SPECIAL_ACCESS): Add define.

2002-06-24  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/winnt.h (PCCHAR, FCHAR, FSHORT, FLONG,
	PLUID_AND_ATTRIBUTES,PSECURITY_IMPERSONATION_LEVEL,
	PSID_AND_ATTRIBUTES, PTOKEN_TYPE, PTOKEN_STATISTICS):
	Add typedefs.
	(CCHAR): Correct typedef.
	(PROCESS_SET_SESSIONID, SECURITY_*,SECTION_MAP_EXECUTE):
	Add defines.

2002-06-24  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* README.w32api: Correct spelling error.

2002-06-19  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/winuser.h (FLASHW_*,INPUT_MOUSE,INPUT_KEYBOARD,
	INPUT_HARDWARE): Add defines.
	(HDEVNOTIFY): Add typedef.
	(FLASHWINFO,tagMOUSEMOVEPOINT,tagMOUSEINPUT,tagKEYBDINPUT,
	tagHARDWAREINPUT,tagINPUT,tagGUITHREADINFO): Define structs and
	typedefs.
	(CreateDesktop[AW],CreateMDIWindow[AW],GetClassInfo[AW],
	GetClassInfoEx[AW],GetKeyboardLayoutList,
	MessageBoxIndirect[AW],MsgWaitForMultipleObjects,
	MsgWaitForMultipleObjectsEx, RegisterClass[AW],
	RegisterClassEx[AW]): Correct prototypes.

2002-06-19  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/ddeml.h (DdeCreateStringHandle{AW]:Correct
	prototypes.
	* include/winsvc.h (StartServiceW): Correct prototype.
	* include/winbase.h (BackupRead,BackupSeek,BackupWrite,
	FileTimeToLocalFileTime, GetAce,GetPrivateProfileStruct[AW],
	GetTickCount,InterlockedExchangeAdd,
	WritePrivateProfileStruct[AW]: Correct prototypes.
	(GetEnvironmentStrings): Correct mapping to
	GetEnvironmentStringsA.
	* include/winver.h (VerQueryValueA,VerQueryValueW):
	Correct prototypes.
	* include/wincon.h (CreateConsoleScreenBuffer): Correct
	prototype.
	* include/winreg.h (RegQueryMultipleValues[AW],
	RegQueryValueEx[AW]):Correct prototypes.