@@ -40,6 +40,8 @@ extern "C" {
 #define TRACKBAR_CLASSW	L"msctls_trackbar32"
 #define UPDOWN_CLASSA	"msctls_updown32"
 #define UPDOWN_CLASSW	L"msctls_updown32"
+#define WC_COMBOBOXEXW	L"ComboBoxEx32"
+#define WC_COMBOBOXEXA	"ComboBoxEx32"
 #define WC_LISTVIEWA	"SysListView32"
 #define WC_LISTVIEWW	L"SysListView32"
 #define WC_TABCONTROLA	"SysTabControl32"
@@ -63,6 +65,23 @@ extern "C" {
 #define ACM_OPENW	(WM_USER+103)
 #define ACN_START	1
 #define ACN_STOP	2
+#define CBEIF_TEXT	0x00000001
+#define CBEIF_IMAGE	0x00000002
+#define CBEIF_SELECTEDIMAGE	0x00000004
+#define CBEIF_OVERLAY	0x00000008
+#define CBEIF_INDENT	0x00000010
+#define CBEIF_LPARAM	0x00000020
+#define CBEIF_DI_SETITEM	0x10000000
+#define CBEN_INSERTITEM	(CBEN_FIRST - 1)
+#define CBEN_DELETEITEM	(CBEN_FIRST - 2)
+#define CBEN_BEGINEDIT	(CBEN_FIRST - 4)
+#define CBEN_ENDEDITA	(CBEN_FIRST - 5)
+#define CBEN_ENDEDITW	(CBEN_FIRST - 6)
+#define CBENF_KILLFOCUS	1
+#define CBENF_RETURN	2
+#define CBENF_ESCAPE	3
+#define CBENF_DROPDOWN	4
+#define CBEMAXSTRLEN 260
 #define DL_BEGINDRAG	1157
 #define DL_CANCELDRAG	1160
 #define DL_DRAGGING	1158
@@ -179,6 +198,10 @@ extern "C" {
 #if (_WIN32_IE >= 0x0400)
 #define CBES_EX_NOSIZELIMIT	0x00000008
 #define CBES_EX_CASESENSITIVE	0x00000010
+#define CBEN_GETDISPINFOA	(CBEN_FIRST - 0)
+#define CBEN_GETDISPINFOW	(CBEN_FIRST - 7)
+#define CBEN_DRAGBEGINA	(CBEN_FIRST - 8)
+#define CBEN_DRAGBEGINW	(CBEN_FIRST - 9)
 #endif /* _WIN32_IE >= 0x0400 */
 #if (_WIN32_IE >= 0x0500)
 #define HDI_FILTER	256
@@ -1266,6 +1289,64 @@ extern "C" {
 #define CBEM_GETITEMW	(WM_USER + 13)
 
 #ifndef RC_INVOKED
+typedef struct tagCOMBOBOXEXITEMA{
+	UINT mask;
+	int iItem;
+	LPSTR pszText;
+	int cchTextMax;
+	int iImage;
+	int iSelectedImage;
+	int iOverlay;
+	int iIndent;
+	LPARAM lParam;
+} COMBOBOXEXITEMA, *PCOMBOBOXEXITEMA;
+typedef COMBOBOXEXITEMA CONST *PCCOMBOEXITEMA;
+typedef struct tagCOMBOBOXEXITEMW{
+	UINT mask;
+	int iItem;
+	LPWSTR pszText;
+	int cchTextMax;
+	int iImage;
+	int iSelectedImage;
+	int iOverlay;
+	int iIndent;
+	LPARAM lParam;
+} COMBOBOXEXITEMW, *PCOMBOBOXEXITEMW;
+typedef COMBOBOXEXITEMW CONST *PCCOMBOEXITEMW;
+#if (_WIN32_IE >= 0x0400)
+typedef struct {
+	NMHDR hdr;
+	COMBOBOXEXITEMA ceItem;
+} NMCOMBOBOXEXA, *PNMCOMBOBOXEXA;
+typedef struct {
+	NMHDR hdr;
+	COMBOBOXEXITEMW ceItem;
+} NMCOMBOBOXEXW, *PNMCOMBOBOXEXW;
+typedef struct {
+	NMHDR   hdr;
+	int iItemid;
+	WCHAR   szText[CBEMAXSTRLEN];
+}NMCBEDRAGBEGINW, *LPNMCBEDRAGBEGINW, *PNMCBEDRAGBEGINW;
+typedef struct {
+	NMHDR   hdr;
+	int iItemid;
+	char    szText[CBEMAXSTRLEN];
+}NMCBEDRAGBEGINA, *LPNMCBEDRAGBEGINA, *PNMCBEDRAGBEGINA;
+#endif /*_WIN32_IE >= 0x0400*/
+typedef struct {
+	NMHDR hdr;
+	BOOL fChanged;
+	int iNewSelection;
+	WCHAR szText[CBEMAXSTRLEN];
+	int iWhy;
+} NMCBEENDEDITW, *LPNMCBEENDEDITW, *PNMCBEENDEDITW;
+typedef struct {
+	NMHDR hdr;
+	BOOL fChanged;
+	int iNewSelection;
+	char szText[CBEMAXSTRLEN];
+	int iWhy;
+} NMCBEENDEDITA, *LPNMCBEENDEDITA,*PNMCBEENDEDITA;
 typedef struct _COLORMAP {
 	COLORREF from;
 	COLORREF to;
@@ -2281,6 +2362,7 @@ WINBOOL WINAPI ImageList_DrawIndirect(IMAGELISTDRAWPARAMS*);
 #define TOOLTIPS_CLASS TOOLTIPS_CLASSW
 #define TRACKBAR_CLASS TRACKBAR_CLASSW
 #define UPDOWN_CLASS UPDOWN_CLASSW
+#define WC_COMBOBOXEX WC_COMBOBOXEXW
 #define WC_HEADER WC_HEADERW
 #define WC_LISTVIEW WC_LISTVIEWW
 #define WC_TABCONTROL WC_TABCONTROLW
@@ -2299,6 +2381,25 @@ typedef TVINSERTSTRUCTW TVINSERTSTRUCT,*LPTVINSERTSTRUCT;
 typedef NM_TREEVIEWW NM_TREEVIEW,*LPNM_TREEVIEW;
 typedef NMTREEVIEWW NMTREEVIEW,*LPNMTREEVIEW;
 #define ACM_OPEN ACM_OPENW
+#define COMBOBOXEXITEM	COMBOBOXEXITEMW
+#define PCOMBOBOXEXITEM	PCOMBOBOXEXITEMW
+#define PCCOMBOBOXEXITEM	PCCOMBOBOXEXITEMW
+#define CBEM_INSERTITEM	CBEM_INSERTITEMW
+#define CBEM_SETITEM	CBEM_SETITEMW
+#define CBEM_GETITEM	CBEM_GETITEMW
+#define CBEN_ENDEDIT	CBEN_ENDEDITW
+#define NMCBEENDEDIT	NMCBEENDEDITW
+#define LPNMCBEENDEDIT	LPNMCBEENDEDITW
+#define PNMCBEENDEDIT	PNMCBEENDEDITW
+#if _WIN32_IE >= 0x0400
+#define NMCOMBOBOXEX	NMCOMBOBOXEXW
+#define PNMCOMBOBOXEX	PNMCOMBOBOXEXW
+#define CBEN_GETDISPINFO	CBEN_GETDISPINFOW
+#define CBEN_DRAGBEGIN	CBEN_DRAGBEGINW
+#define NMCBEDRAGBEGIN	NMCBEDRAGBEGINW
+#define LPNMCBEDRAGBEGIN	LPNMCBEDRAGBEGINW
+#define PNMCBEDRAGBEGIN PNMCBEDRAGBEGINW
+#endif /* _WIN32_IE >= 0x0400 */
 #define SB_GETTEXT	SB_GETTEXTW
 #define SB_SETTEXT	SB_SETTEXTW
 #define SB_GETTEXTLENGTH	SB_GETTEXTLENGTHW
@@ -2413,7 +2514,7 @@ typedef REBARBANDINFOW REBARBANDINFO,*LPREBARBANDINFO;
 #define REBARBANDINFO_V3_SIZE REBARBANDINFOW_V3_SIZE
 #define RB_INSERTBAND RB_INSERTBANDW
 #define RB_SETBANDINFO RB_SETBANDINFOW
-#else
+#else /* UNICODE */
 #define ANIMATE_CLASS ANIMATE_CLASSA
 #define HOTKEY_CLASS HOTKEY_CLASSA
 #define PROGRESS_CLASS PROGRESS_CLASSA
@@ -2422,6 +2523,7 @@ typedef REBARBANDINFOW REBARBANDINFO,*LPREBARBANDINFO;
 #define TOOLTIPS_CLASS TOOLTIPS_CLASSA
 #define TRACKBAR_CLASS TRACKBAR_CLASSA
 #define UPDOWN_CLASS UPDOWN_CLASSA
+#define WC_COMBOBOXEX	WC_COMBOBOXEXA
 #define WC_HEADER WC_HEADERA
 #define WC_LISTVIEW WC_LISTVIEWA
 #define WC_TABCONTROL WC_TABCONTROLA
@@ -2440,6 +2542,25 @@ typedef TVINSERTSTRUCTA TVINSERTSTRUCT,*LPTVINSERTSTRUCT;
 typedef NM_TREEVIEWA NM_TREEVIEW,*LPNM_TREEVIEW;
 typedef NMTREEVIEWA NMTREEVIEW,*LPNMTREEVIEW;
 #define ACM_OPEN ACM_OPENA
+#define COMBOBOXEXITEM	COMBOBOXEXITEMA
+#define PCOMBOBOXEXITEM	PCOMBOBOXEXITEMA
+#define PCCOMBOBOXEXITEM	PCCOMBOBOXEXITEMA
+#define CBEM_INSERTITEM	CBEM_INSERTITEMA
+#define CBEM_SETITEM	CBEM_SETITEMA
+#define CBEM_GETITEM	CBEM_GETITEMA
+#define CBEN_ENDEDIT	CBEN_ENDEDITA
+#define NMCBEENDEDIT	NMCBEENDEDITA
+#define LPNMCBEENDEDIT	LPNMCBEENDEDITA
+#define PNMCBEENDEDIT	PNMCBEENDEDITA
+#if _WIN32_IE >= 0x0400
+#define NMCOMBOBOXEX	NMCOMBOBOXEXA
+#define PNMCOMBOBOXEX	PNMCOMBOBOXEXA
+#define CBEN_DRAGBEGIN	CBEN_DRAGBEGINA
+#define CBEN_GETDISPINFO	CBEN_GETDISPINFOA
+#define NMCBEDRAGBEGIN	NMCBEDRAGBEGINA
+#define LPNMCBEDRAGBEGIN	LPNMCBEDRAGBEGINA
+#define PNMCBEDRAGBEGIN	PNMCBEDRAGBEGINA
+#endif /* _WIN32_IE >= 0x0400 */
 #define SB_GETTEXT	SB_GETTEXTA
 #define SB_SETTEXT	SB_SETTEXTA
 #define SB_GETTEXTLENGTH	SB_GETTEXTLENGTHA
